<resources>
    <string name="app_name">Manillas</string>
    <string name="material">Elige el material</string>
    <string name="dije">Elige el dije</string>
    <string name="tipo">Elige el tipo</string>
    <string name="comprar">Comprar</string>
    <string name="cantidad">Ingrese la cantidad</string>
    <string name="tipo_moneda">Seleccione el tipo de moneda</string>
    <string name="error_cantidad">Escriba la canctidad</string>
    <string name="error_signo">Escriba una cantidad valida</string>
</resources>
