<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Manillas XYZ"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo_moneda" />

    <Spinner
        android:id="@+id/spnMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material" />

    <Spinner
        android:id="@+id/spnMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dije" />

    <Spinner
        android:id="@+id/spnDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo" />

    <Spinner
        android:id="@+id/spnTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidad"
        android:inputType="number" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="comprar"
        android:text="@string/comprar" />

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>